--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -2439,20 +2439,36 @@ automagically detect compressed archives is preferred for use with
 @enindex TAR
 @command{tar}: use environment variable @env{TAR} to override this.
 
+There need to be suitable versions of the tools @command{grep},
+@command{sed} and @command{tr}: the problems are usually with old AT&T
+and BSD variants.  @command{configure} will try to find suitable
+versions (including looking in @file{/usr/xpg4/bin} which is used on
+some commercial Unixes).
+
 You will not be able to build most of the manuals unless you have
 @command{makeinfo} version 4.7 or later installed , and if not some of
 the @HTML{} manuals will be linked to @acronym{CRAN}.  (Version 4.6 is
 known to create incorrect @HTML{} files.)  To make DVI or PDF versions
-of the manuals you will also need @file{texinfo.tex} installed (which is
-part of the @acronym{GNU} @pkg{texinfo} distribution but is often made
-part of the @TeX{} package in re-distributions) as well as
-@command{texi2dvi}.
+of the manuals you will also need file @file{texinfo.tex} installed
+(which is part of the @acronym{GNU} @pkg{texinfo} distribution but is
+often made part of the @TeX{} package in re-distributions) as well as
+@command{texi2dvi}.@footnote{@command{texi2dvi} is normally a shell
+script.  Some versions, e.g.@: that from @pkg{texinfo} 4.13a, need to be
+run under @command{bash} rather than a Bourne shell as on, say,
+Solaris.}  Further, the versions of @command{texi2dvi} and
+@file{texinfo.tex} need to be compatible: we have seen problems with
+older @TeX{} distributions (TeXLive 2007 and MiKTeX 2.8) used with
+@pkg{texinfo} 4.13.
 
 @cindex Vignettes
 The DVI and PDF documentation and building vignettes needs @command{tex}
 and @command{latex}, or @command{pdftex} and @command{pdflatex}.  As
 from @R{} 2.11.0 we require @LaTeX{} version @code{2005/12/01} or later
-(for UTF-8 support).
+(for UTF-8 support).  Building PDF package manuals (including the @R{}
+reference manual) and vignettes is sensitive to the version of the
+@LaTeX{} package @pkg{hyperref} and we recommend that the @TeX{}
+distibution used is keep up-to-date.
+
 
 If you want to build from the R Subversion repository you need both
 @command{makeinfo} and @command{pdflatex}.
