ported r51569 (all.equal(*, tol)) from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51570 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -547,6 +547,9 @@ BUG FIXES
     o	read.fwf() misread multi-line records when n was specified.
         (PR#14241)
 
+    o	all.equal(*, tolerance = e) passes the numeric tolerance also to
+	the comparison of the attributes.
+
 
 
 
