tweak for Unicode Inno Setup
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51571 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/rw-FAQ.texi
+++ b/src/gnuwin32/rw-FAQ.texi
@@ -199,7 +199,7 @@ This compares checksums on all the installed files with those put into
 the installer, and will report any changed or missing files.
 
 (It only works if R was installed from the Inno Setup installer, and not
-the MSI installer.)
+the MSI installer, and does not work with the Unicode Inno Setup installer.)
 
 @node Can I customize the installation?, How do I run it?, How do I check an installation?, Installation and Usage
 @section Can I customize the installation?
