suppress caching of inherited methods in selectMethod()
git-svn-id: https://svn.r-project.org/R/trunk@51579 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -58,7 +58,9 @@ INSTALLATION
 
 BUG FIXES
 
-    o	Placeholder
+    o	Calls to selectMethod() by default no longer cache inherited
+        methods.  This could previously corrupt methods used by as().
+
 
 
 
