--- a/NEWS
+++ b/NEWS
@@ -55,6 +55,8 @@ INSTALLATION
     o	A C99 compiler is now required, and more C99 language features
 	will be used in the R sources.
 
+    o	Tcl/Tk >= 8.4 is now required (increased from 8.3).
+
 
 BUG FIXES
 
