- long standing rather cosmetic improvement in pd_lower_cf() convergence   checking (related to r50393).
- pgamma(0,0, lower=FALSE) --> 0

git-svn-id: https://svn.r-project.org/R/trunk@51613 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -617,6 +617,9 @@ BUG FIXES
     o	all.equal(*, tolerance = e) passes the numeric tolerance also to
 	the comparison of the attributes.
 
+    o	pgamma(0,0), a boundary case, now returns 0, its limit from the
+	left, rather than the limit from the right.
+
 
 
 
