--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -3745,7 +3745,7 @@ CPICFLAGS=-Kpic
 F77=sunf95
 FFLAGS="-O5 -libmil -nofstore"
 FPICFLAGS=-Kpic
-CXX=sunCC
+CXX="sunCC -library=stlport4"
 CXXFLAGS="-xO5 -xlibmil -nofstore -features=tmplrefstatic"
 CXXPICFLAGS=-Kpic
 FC=sunf95
@@ -3753,21 +3753,22 @@ FCFLAGS=$FFLAGS
 FCPICFLAGS=-Kpic
 LDFLAGS=-L/opt/sunstudio12.1/rtlibs/amd64
 SHLIB_LDFLAGS=-shared
-SHLIB_CXXLDFLAGS="-G -lCstd"
+SHLIB_CXXLDFLAGS=-G
 SHLIB_FCLDFLAGS=-G
 SAFE_FFLAGS="-O5 -libmil"
 @end example
 
 @noindent
 @option{-m64} could be added, but was the default.  Do not use
-@option{-fast}: see the warnings under Solaris.
+@option{-fast}: see the warnings under Solaris. (The C++ options are
+also explained under Solaris.)
 
 The resulting build of @R{} was not quite as fast as that built with
 @command{gcc}@tie{}4.4.3 at @samp{-O3}.
 
 Others have found on at least some versions of @cputype{i386} Linux that
 the configure flag @option{--disable-largefile} was needed (since
-@file{glob.h} presumed @command{gcc} was being used).
+@file{glob.h} on that platform presumed @command{gcc} was being used).
 
 @node FreeBSD, Mac OS X, Linux, Platform notes
 @section FreeBSD
@@ -3778,8 +3779,8 @@ on 6.x in the past).  Since Darwin (the base OS of Mac OS X) is based on
 FreeBSD we find testing on Darwin tends to pick up any potential
 problems on FreeBSD problems quite early.
 
-The native BSD @command{make} suffices to build @R{} but a number of
-packages require @acronym{GNU} @command{make}.  (The BSD version is
+The native BSD @command{make} suffices to build @R{} but a small number
+of packages require @acronym{GNU} @command{make}.  (The BSD version is
 @command{bsdmake} on Darwin.)
 
 @node Mac OS X, Solaris, FreeBSD, Platform notes
@@ -3900,6 +3901,9 @@ installed under @file{/opt/csw}.  You will need @acronym{GNU}
 @code{libiconv} and @code{readline}: the Solaris version of @code{iconv}
 is not sufficiently powerful.
 
+The native @command{make} suffices to build @R{} but a small number
+of packages require @acronym{GNU} @command{make}.
+
 Some people have reported that the Solaris @code{libintl} needs to be
 avoided, for example by using @option{--disable-nls} or
 @option{--with-included-gettext} or using @code{libintl} from OpenCSW.
@@ -3918,12 +3922,11 @@ CPPFLAGS=-I/opt/csw/include
 CFLAGS="-O -xlibmieee"
 F77=f95
 FFLAGS=-O4
-CXX=CC
+CXX="CC -library=stlport"
 CXXFLAGS=-O
 FC=f95
 FCFLAGS=$FFLAGS
 LDFLAGS=-L/opt/csw/lib
-SHLIB_CXXLDFLAGS="-G -lCstd"
 @end example
 
 @noindent
@@ -3959,7 +3962,20 @@ CXXFLAGS="-xO5 -xlibmil -nofstore -xtarget=native"
 SAFE_FFLAGS="-O5 -libmil -fstore -xtarget=native"
 @end example
 
-Many packages using C++ will need the more liberal interpretation given by
+The SunStudio compilers provide several implementations of the C++
+standard which select both the set of headers and a C++ runtime library.
+These are selected by the @option{-library} flag, which as it is needed
+for both compiling and linking is best specified as part of the
+compiler.  The examples about use @samp{stlport4}, currently the most
+modern of the options: the default (but still needed to be specified as
+it is needed for linking) is @samp{Cstd} which dates from 1998: see
+@uref{http://developers.sun.com/solaris/articles/cmp_stlport_libCstd.html}.
+Note though that most external Solaris C++ libraries will have been
+built with @samp{Cstd} and so an @R{} package using such a package also
+needs to be.
+
+Several CRAN packages using C++ need the more liberal interpretation
+given by
 
 @example
 CXXFLAGS="-features=tmplrefstatic"
